[Feat] Update translations

--- a/lang/de.json
+++ b/lang/de.json
@@ -36,25 +36,25 @@
     "Design Patterns": "Entwurfsmuster",
     "DevOps": "DevOps",
     "Docker, Linux": "Docker, Linux",
-    "Dominik Jasiński": "Dominik Jasiński",
+    "Enter a unique key to link translations": "Geben Sie einen eindeutigen Schlüssel ein, um Übersetzungen zu verknüpfen",
     "Enter your email": "Geben Sie Ihre E-Mail ein",
-    "Exploring": "Erkunden",
     "Featured Articles": "Ausgewählte Artikel",
     "Forgot password?": "Passwort vergessen?",
     "Get notified about new articles and resources on PHP development and DevOps practices": "Erhalten Sie Benachrichtigungen über neue Artikel und Ressourcen zur PHP-Entwicklung und DevOps-Praktiken",
     "Home": "Startseite",
     "I respect your privacy. Unsubscribe at any time": "Ich respektiere Ihre Privatsphäre. Sie können sich jederzeit abmelden",
-    "I'm a passionate PHP developer with extensive experience in Laravel and Symfony frameworks. With 3 years of professional experience, I specialize in building robust, scalable web applications and implementing DevOps practices to streamline development workflows.": "Ich bin ein begeisterter PHP-Entwickler mit umfassender Erfahrung in Laravel und Symfony-Frameworks. Mit 3 Jahren beruflicher Erfahrung spezialisiere ich mich auf das Entwickeln robuster, skalierbarer Webanwendungen und die Implementierung von DevOps-Praktiken, um den Entwicklungsprozess zu optimieren.",
+    "I'm a passionate PHP developer with extensive experience in Laravel and Symfony frameworks. With 3 years of professional experience, I specialize in building robust, scalable web applications and implementing DevOps practices to streamline development workflows.": "Ich bin ein begeisterter PHP-Entwickler mit umfassender Erfahrung in Laravel und Symfony-Frameworks. Mit 3 Jahren beruflicher Erfahrung spezialisiere ich mich auf das Entwickeln robuster, skalierbarer Webanwendungen und das Implementieren von DevOps-Praktiken zur Optimierung des Entwicklungsweges.",
     "Ideo Sp. z o.o.": "Ideo Sp. z o.o.",
+    "Language": "Sprache",
     "Laravel & Symfony tips, patterns, and architectural insights": "Laravel & Symfony Tipps, Muster und architektonische Einblicke",
     "Latest": "Neueste",
-    "Leading backend development with Laravel and implementing DevOps practices to streamline development workflows.": "Führende Backend-Entwicklung mit Laravel und Implementierung von DevOps-Praktiken zur Optimierung des Entwicklungsplans.",
+    "Leading backend development with Laravel and implementing DevOps practices to streamline development workflows.": "Führende Backend-Entwicklung mit Laravel und Implementierung von DevOps-Praktiken zur Optimierung des Entwicklungsweges.",
     "Log in to your account": "Anmelden zu Ihrem Konto",
     "Log out": "Abmelden",
     "Manage Categories": "Kategorien verwalten",
     "Manage Posts": "Beiträge verwalten",
     "Manage Tags": "Tags verwalten",
-    "My technical journey started with PHP, but quickly evolved to embrace modern development practices, containerization, CI\/CD pipelines. I believe in clean code, thorough testing, and continuous improvement.": "Meine technische Reise begann mit PHP, entwickelte sich jedoch schnell weiter, um moderne Entwicklungspraktiken, Containerisierung, CI\/CD-Pipelines und Infrastruktur als Code zu umfassen. Ich glaube an sauberen Code, gründliche Tests und kontinuierliche Verbesserung.",
+    "My technical journey started with PHP, but quickly evolved to embrace modern development practices, containerization, CI\/CD pipelines. I believe in clean code, thorough testing, and continuous improvement.": "Meine technische Reise begann mit PHP, aber ich habe schnell zu modernen Entwicklungspraktiken, Containerisierung und CI\/CD-Pipelines übergegangen. Ich glaube an sauberen Code, durchdachtes Testen und stetige Verbesserung.",
     "MySQL, PostgreSQL": "MySQL, PostgreSQL",
     "Next": "Nächster",
     "No posts found": "Keine Beiträge gefunden",
@@ -83,6 +83,7 @@
     "Save Tag": "Tag speichern",
     "Search posts...": "Beiträge suchen...",
     "Select a category": "Kategorie auswählen",
+    "Select a language": "Sprache auswählen",
     "Select tags...": "Tags auswählen...",
     "Settings": "Einstellungen",
     "Sort by": "Sortieren nach",
@@ -94,12 +95,14 @@
     "Technical Skills": "Technische Fähigkeiten",
     "Technical insights, best practices, and deep dives into Laravel, Symfony, and modern DevOps solutions": "Technische Einblicke, Best Practices und tiefgehende Analysen zu Laravel, Symfony und modernen DevOps-Lösungen",
     "Testing (PHPUnit, Pest)": "Testen (PHPUnit, Pest)",
+    "This action cannot be undone. This will permanently delete this category.": "Diese Aktion kann nicht rückgängig gemacht werden. Diese Kategorie wird dauerhaft gelöscht.",
     "This action cannot be undone. This will permanently delete this post.": "Diese Aktion kann nicht rückgängig gemacht werden. Dieser Beitrag wird dauerhaft gelöscht.",
     "This action cannot be undone. This will permanently delete this tag.": "Diese Aktion kann nicht rückgängig gemacht werden. Dieses Tag wird dauerhaft gelöscht.",
-    "Through this blog, I share my experiences, best practices, and insights into PHP development and DevOps methodologies. Whether you're a beginner or an experienced developer, I hope you'll find valuable content that helps you in your own technical journey.": "Durch diesen Blog teile ich meine Erfahrungen, Best Practices und Einblicke in die PHP-Entwicklung und DevOps-Methoden. Egal, ob Sie ein Anfänger oder ein erfahrener Entwickler sind, ich hoffe, dass Sie wertvolle Inhalte finden, die Ihnen auf Ihrer eigenen technischen Reise helfen.",
+    "Through this blog, I share my experiences, best practices, and insights into PHP development and DevOps methodologies. Whether you're a beginner or an experienced developer, I hope you'll find valuable content that helps you in your own technical journey.": "Durch diesen Blog teile ich meine Erfahrungen, Best Practices und Einblicke in die PHP-Entwicklung und DevOps-Methoden. Ob Sie Anfänger oder erfahrener Entwickler sind, hoffe ich, dass Sie wertvolle Inhalte finden, die Ihnen bei Ihrer eigenen technischen Reise helfen.",
     "Title": "Titel",
     "Title A-Z": "Titel A-Z",
     "Title Z-A": "Titel Z-A",
+    "Translation Key": "Übersetzungsschlüssel",
     "View all": "Alle anzeigen",
     "You have not created any tags yet.": "Sie haben noch keine Tags erstellt.",
     "auth.failed": "Diese Anmeldeinformationen stimmen nicht mit unseren Aufzeichnungen überein.",
