--- a/lang/en.json
+++ b/lang/en.json
@@ -36,9 +36,8 @@
     "Design Patterns": "Design Patterns",
     "DevOps": "DevOps",
     "Docker, Linux": "Docker, Linux",
-    "Dominik Jasiński": "Dominik Jasiński",
+    "Enter a unique key to link translations": "Enter a unique key to link translations",
     "Enter your email": "Enter your email",
-    "Exploring": "Exploring",
     "Featured Articles": "Featured Articles",
     "Forgot password?": "Forgot password?",
     "Get notified about new articles and resources on PHP development and DevOps practices": "Get notified about new articles and resources on PHP development and DevOps practices",
@@ -46,6 +45,7 @@
     "I respect your privacy. Unsubscribe at any time": "I respect your privacy. Unsubscribe at any time",
     "I'm a passionate PHP developer with extensive experience in Laravel and Symfony frameworks. With 3 years of professional experience, I specialize in building robust, scalable web applications and implementing DevOps practices to streamline development workflows.": "I'm a passionate PHP developer with extensive experience in Laravel and Symfony frameworks. With 3 years of professional experience, I specialize in building robust, scalable web applications and implementing DevOps practices to streamline development workflows.",
     "Ideo Sp. z o.o.": "Ideo Sp. z o.o.",
+    "Language": "Language",
     "Laravel & Symfony tips, patterns, and architectural insights": "Laravel & Symfony tips, patterns, and architectural insights",
     "Latest": "Latest",
     "Leading backend development with Laravel and implementing DevOps practices to streamline development workflows.": "Leading backend development with Laravel and implementing DevOps practices to streamline development workflows.",
@@ -83,6 +83,7 @@
     "Save Tag": "Save Tag",
     "Search posts...": "Search posts...",
     "Select a category": "Select a category",
+    "Select a language": "Select a language",
     "Select tags...": "Select tags...",
     "Settings": "Settings",
     "Sort by": "Sort by",
@@ -94,12 +95,14 @@
     "Technical Skills": "Technical Skills",
     "Technical insights, best practices, and deep dives into Laravel, Symfony, and modern DevOps solutions": "Technical insights, best practices, and deep dives into Laravel, Symfony, and modern DevOps solutions",
     "Testing (PHPUnit, Pest)": "Testing (PHPUnit, Pest)",
+    "This action cannot be undone. This will permanently delete this category.": "This action cannot be undone. This will permanently delete this category.",
     "This action cannot be undone. This will permanently delete this post.": "This action cannot be undone. This will permanently delete this post.",
     "This action cannot be undone. This will permanently delete this tag.": "This action cannot be undone. This will permanently delete this tag.",
     "Through this blog, I share my experiences, best practices, and insights into PHP development and DevOps methodologies. Whether you're a beginner or an experienced developer, I hope you'll find valuable content that helps you in your own technical journey.": "Through this blog, I share my experiences, best practices, and insights into PHP development and DevOps methodologies. Whether you're a beginner or an experienced developer, I hope you'll find valuable content that helps you in your own technical journey.",
     "Title": "Title",
     "Title A-Z": "Title A-Z",
     "Title Z-A": "Title Z-A",
+    "Translation Key": "Translation Key",
     "View all": "View all",
     "You have not created any tags yet.": "You have not created any tags yet.",
     "auth.failed": "auth.failed",
