--- a/lang/pl.json
+++ b/lang/pl.json
@@ -35,10 +35,9 @@
     "Delete": "Usuń",
     "Design Patterns": "Wzorce projektowe",
     "DevOps": "DevOps",
-    "Docker, Linux": "",
-    "Dominik Jasiński": "Dominik Jasiński",
+    "Docker, Linux": "Docker, Linux",
+    "Enter a unique key to link translations": "Wpisz unikalny klucz do linkowania tłumaczeń",
     "Enter your email": "Wpisz swój email",
-    "Exploring": "Odkrywanie",
     "Featured Articles": "Artykuły wyróżnione",
     "Forgot password?": "Zapomniałeś hasła?",
     "Get notified about new articles and resources on PHP development and DevOps practices": "Otrzymuj powiadomienia o nowych artykułach i zasobach dotyczących programowania w PHP i praktyk DevOps",
@@ -46,6 +45,7 @@
     "I respect your privacy. Unsubscribe at any time": "Szanuję Twoją prywatność. Możesz zrezygnować w każdej chwili",
     "I'm a passionate PHP developer with extensive experience in Laravel and Symfony frameworks. With 3 years of professional experience, I specialize in building robust, scalable web applications and implementing DevOps practices to streamline development workflows.": "Jestem pasjonującym programistą PHP z bogatym doświadczeniem w frameworkach Laravel i Symfony. Z 3-letnim doświadczeniem w branży, specjalizuję się w budowaniu niezawodnych, skalowalnych aplikacji internetowych i implementacji praktyk DevOps w celu płynnego przepływu pracy",
     "Ideo Sp. z o.o.": "Ideo Sp. z o.o.",
+    "Language": "Język",
     "Laravel & Symfony tips, patterns, and architectural insights": "Porady dotyczące Laravel i Symfony, wzorce i spostrzeżenia architektoniczne",
     "Latest": "Najnowsze",
     "Leading backend development with Laravel and implementing DevOps practices to streamline development workflows.": "Rozwój backendu z użyciem Laravel i implementacja praktyk DevOps w celu płynnego przepływu pracy",
@@ -54,7 +54,7 @@
     "Manage Categories": "Zarządzaj kategoriami",
     "Manage Posts": "Zarządzaj postami",
     "Manage Tags": "Zarządzaj tagami",
-    "My technical journey started with PHP, but quickly evolved to embrace modern development practices, containerization, CI\/CD pipelines. I believe in clean code, thorough testing, and continuous improvement.": "Moja techniczna podróż rozpoczęła się od PHP, ale szybko ewoluowała, obejmując nowoczesne praktyki rozwoju, konteneryzację, pipelines CI\/CD. Wierzę w czysty kod, dokładne testowanie i ciągłe doskonalenie.",
+    "My technical journey started with PHP, but quickly evolved to embrace modern development practices, containerization, CI\/CD pipelines. I believe in clean code, thorough testing, and continuous improvement.": "Moja podróż techniczna zaczęła się od PHP, ale szybko ewoluowała do przyjęcia nowoczesnych praktyk programistycznych, konteneryzacji i CI\/CD. Wierzę w czysty kod, dokładne testowanie i ciągłe doskonalenie.",
     "MySQL, PostgreSQL": "MySQL, PostgreSQL",
     "Next": "Następna",
     "No posts found": "Nie znaleziono żadnych postów",
@@ -83,6 +83,7 @@
     "Save Tag": "Zapisz tag",
     "Search posts...": "Szukaj postów...",
     "Select a category": "Wybierz kategorię",
+    "Select a language": "Wybierz język",
     "Select tags...": "Wybierz tagi...",
     "Settings": "Ustawienia",
     "Sort by": "Sortuj według",
@@ -94,12 +95,14 @@
     "Technical Skills": "Umiejętności techniczne",
     "Technical insights, best practices, and deep dives into Laravel, Symfony, and modern DevOps solutions": "Techniczne spostrzeżenia, najlepsze praktyki i dogłębne analizy Laravel, Symfony i nowoczesnych rozwiązań DevOps",
     "Testing (PHPUnit, Pest)": "Testowanie (PHPUnit, Pest)",
+    "This action cannot be undone. This will permanently delete this category.": "Tej akcji nie można cofnąć. To trwale usunie tę kategorię.",
     "This action cannot be undone. This will permanently delete this post.": "Tej akcji nie można cofnąć. To trwale usunie ten post.",
     "This action cannot be undone. This will permanently delete this tag.": "Tej akcji nie można cofnąć. To trwale usunie ten tag.",
-    "Through this blog, I share my experiences, best practices, and insights into PHP development and DevOps methodologies. Whether you're a beginner or an experienced developer, I hope you'll find valuable content that helps you in your own technical journey.": "Poprzez ten blog dzielę się swoimi doświadczeniami, najlepszymi praktykami i spostrzeżeniami dotyczącymi programowania w PHP i metodologii DevOps. Niezależnie od tego, czy jesteś początkującym, czy doświadczonym programistą, mam nadzieję, że znajdziesz wartościowe treści, które pomogą Ci w Twojej własnej technicznej podróży.",
+    "Through this blog, I share my experiences, best practices, and insights into PHP development and DevOps methodologies. Whether you're a beginner or an experienced developer, I hope you'll find valuable content that helps you in your own technical journey.": "Przez ten blog dzielę się swoimi doświadczeniami, najlepszymi praktykami i wglądem do programowania w PHP i praktyk DevOps. Niezależnie od tego, czy jesteś początkującym programistą, czy doświadczonym programistą, mam nadzieję, że znajdziesz wartościowe materiały, które pomogą Ci w swojej podróży technicznej.",
     "Title": "Tytuł",
     "Title A-Z": "Tytuł A-Z",
     "Title Z-A": "Tytuł Z-A",
+    "Translation Key": "Klucz tłumaczenia",
     "View all": "Pokaż wszystkie",
     "You have not created any tags yet.": "Nie utworzyłeś jeszcze żadnych tagów.",
     "auth.failed": "Błędne dane logowania.",
