[Feat] Update translations

--- a/lang/de.json
+++ b/lang/de.json
@@ -11,9 +11,11 @@
     "Back to all posts": "Zurück zu allen Beiträgen",
     "Backend Development": "Backend-Entwicklung",
     "Best Practices": "Best Practices",
+    "Blog - Technology and Programming Articles": "Blog - Technologische und Programmierungsartikel",
     "Blog Categories": "Blog-Kategorien",
     "Blog Posts": "Blog-Beiträge",
     "Blog Tags": "Blog-Tags",
+    "Browse our collection of blog posts about technology, programming, and software development.": "Durchsuchen Sie unsere Sammlung von Blog-Beiträgen über Technologie, Programmierung und Softwareentwicklung.",
     "CI\/CD (GitHub Actions, GitLab CI)": "CI\/CD (GitHub Actions, GitLab CI)",
     "CI\/CD pipelines, containerization": "CI\/CD-Pipelines, Containerisierung",
     "Cancel": "Abbrechen",
@@ -23,6 +25,7 @@
     "Category deleted successfully": "Kategorie erfolgreich gelöscht",
     "Category updated successfully": "Kategorie erfolgreich aktualisiert",
     "Clean code, testing strategies, and development workflows": "Sauberer Code, Teststrategien und Entwicklungsabläufe",
+    "Comment text": "Kommentartext",
     "Comments": "Kommentare",
     "Contact Me": "Kontaktieren Sie mich",
     "Content": "Inhalt",
@@ -43,12 +46,13 @@
     "Get notified about new articles and resources on PHP development and DevOps practices": "Erhalten Sie Benachrichtigungen über neue Artikel und Ressourcen zur PHP-Entwicklung und DevOps-Praktiken",
     "Home": "Startseite",
     "I respect your privacy. Unsubscribe at any time": "Ich respektiere Ihre Privatsphäre. Sie können sich jederzeit abmelden",
-    "I'm a passionate PHP developer with extensive experience in Laravel and Symfony frameworks. With 3 years of professional experience, I specialize in building robust, scalable web applications and implementing DevOps practices to streamline development workflows.": "Ich bin ein begeisterter PHP-Entwickler mit umfassender Erfahrung in Laravel und Symfony-Frameworks. Mit 3 Jahren beruflicher Erfahrung spezialisiere ich mich auf das Entwickeln robuster, skalierbarer Webanwendungen und das Implementieren von DevOps-Praktiken zur Optimierung des Entwicklungsweges.",
+    "I'm a passionate PHP developer with experience in Laravel and Symfony frameworks. With 3 years of professional experience, I specialize in building robust, scalable web applications and implementing DevOps practices to streamline development workflows.": "Ich bin ein begeisterter PHP-Entwickler mit Erfahrung in Laravel und Symfony-Frameworks. Mit 3 Jahren beruflicher Erfahrung spezialisiere ich mich auf das Entwickeln robuster, skalierbarer Webanwendungen und das Implementieren von DevOps-Praktiken zur Optimierung des Entwicklungsweges.",
     "Ideo Sp. z o.o.": "Ideo Sp. z o.o.",
     "Language": "Sprache",
     "Laravel & Symfony tips, patterns, and architectural insights": "Laravel & Symfony Tipps, Muster und architektonische Einblicke",
     "Latest": "Neueste",
     "Leading backend development with Laravel and implementing DevOps practices to streamline development workflows.": "Führende Backend-Entwicklung mit Laravel und Implementierung von DevOps-Praktiken zur Optimierung des Entwicklungsweges.",
+    "Leave a comment": "Kommentar hinterlassen",
     "Log in to your account": "Anmelden zu Ihrem Konto",
     "Log out": "Abmelden",
     "Manage Categories": "Kategorien verwalten",
@@ -57,6 +61,8 @@
     "My technical journey started with PHP, but quickly evolved to embrace modern development practices, containerization, CI\/CD pipelines. I believe in clean code, thorough testing, and continuous improvement.": "Meine technische Reise begann mit PHP, aber ich habe schnell zu modernen Entwicklungspraktiken, Containerisierung und CI\/CD-Pipelines übergegangen. Ich glaube an sauberen Code, durchdachtes Testen und stetige Verbesserung.",
     "MySQL, PostgreSQL": "MySQL, PostgreSQL",
     "Next": "Nächster",
+    "Next comments page": "Nächste Kommentarsseite",
+    "Next page": "Nächste Seite",
     "No posts found": "Keine Beiträge gefunden",
     "No tags found": "Keine Tags gefunden",
     "Oldest": "Älteste",
@@ -71,22 +77,27 @@
     "Pick a date": "Datum auswählen",
     "Posts": "Beiträge",
     "Previous": "Vorheriger",
+    "Previous comments page": "Vorherige Kommentarsseite",
+    "Previous page": "Vorherige Seite",
     "Professional Journey": "Berufliche Reise",
     "Profile": "Profil",
     "Publish at": "Veröffentlichen am",
     "Query Performance": "Abfrageleistung",
     "Read more": "Mehr lesen",
+    "Read more about": "Mehr über",
     "Read the Blog": "Blog lesen",
     "Redis": "Redis",
     "Save Category": "Kategorie speichern",
     "Save Post": "Beitrag speichern",
     "Save Tag": "Tag speichern",
+    "Search posts": "Beiträge suchen",
     "Search posts...": "Beiträge suchen...",
     "Select a category": "Kategorie auswählen",
     "Select a language": "Sprache auswählen",
     "Select tags...": "Tags auswählen...",
     "Settings": "Einstellungen",
     "Sort by": "Sortieren nach",
+    "Sort posts": "Beiträge sortieren",
     "Status": "Status",
     "Stay Updated": "Bleiben Sie auf dem Laufenden",
     "Submit Comment": "Kommentar senden",
@@ -104,6 +115,7 @@
     "Title Z-A": "Titel Z-A",
     "Translation Key": "Übersetzungsschlüssel",
     "View all": "Alle anzeigen",
+    "Write your comment here...": "Schreiben Sie Ihren Kommentar hier...",
     "You have not created any tags yet.": "Sie haben noch keine Tags erstellt.",
     "auth.failed": "Diese Anmeldeinformationen stimmen nicht mit unseren Aufzeichnungen überein.",
     "auth.password": "Das eingegebene Passwort ist falsch.",
