--- a/lang/en.json
+++ b/lang/en.json
@@ -11,9 +11,11 @@
     "Back to all posts": "Back to all posts",
     "Backend Development": "Backend Development",
     "Best Practices": "Best Practices",
+    "Blog - Technology and Programming Articles": "Blog - Technology and Programming Articles",
     "Blog Categories": "Blog Categories",
     "Blog Posts": "Blog Posts",
     "Blog Tags": "Blog Tags",
+    "Browse our collection of blog posts about technology, programming, and software development.": "Browse our collection of blog posts about technology, programming, and software development.",
     "CI\/CD (GitHub Actions, GitLab CI)": "CI\/CD (GitHub Actions, GitLab CI)",
     "CI\/CD pipelines, containerization": "CI\/CD pipelines, containerization",
     "Cancel": "Cancel",
@@ -23,6 +25,7 @@
     "Category deleted successfully": "Category deleted successfully",
     "Category updated successfully": "Category updated successfully",
     "Clean code, testing strategies, and development workflows": "Clean code, testing strategies, and development workflows",
+    "Comment text": "Comment text",
     "Comments": "Comments",
     "Contact Me": "Contact Me",
     "Content": "Content",
@@ -43,12 +46,13 @@
     "Get notified about new articles and resources on PHP development and DevOps practices": "Get notified about new articles and resources on PHP development and DevOps practices",
     "Home": "Home",
     "I respect your privacy. Unsubscribe at any time": "I respect your privacy. Unsubscribe at any time",
-    "I'm a passionate PHP developer with extensive experience in Laravel and Symfony frameworks. With 3 years of professional experience, I specialize in building robust, scalable web applications and implementing DevOps practices to streamline development workflows.": "I'm a passionate PHP developer with extensive experience in Laravel and Symfony frameworks. With 3 years of professional experience, I specialize in building robust, scalable web applications and implementing DevOps practices to streamline development workflows.",
+    "I'm a passionate PHP developer with experience in Laravel and Symfony frameworks. With 3 years of professional experience, I specialize in building robust, scalable web applications and implementing DevOps practices to streamline development workflows.": "I'm a passionate PHP developer with experience in Laravel and Symfony frameworks. With 3 years of professional experience, I specialize in building robust, scalable web applications and implementing DevOps practices to streamline development workflows.",
     "Ideo Sp. z o.o.": "Ideo Sp. z o.o.",
     "Language": "Language",
     "Laravel & Symfony tips, patterns, and architectural insights": "Laravel & Symfony tips, patterns, and architectural insights",
     "Latest": "Latest",
     "Leading backend development with Laravel and implementing DevOps practices to streamline development workflows.": "Leading backend development with Laravel and implementing DevOps practices to streamline development workflows.",
+    "Leave a comment": "Leave a comment",
     "Log in to your account": "Log in to your account",
     "Log out": "Log out",
     "Manage Categories": "Manage Categories",
@@ -57,6 +61,8 @@
     "My technical journey started with PHP, but quickly evolved to embrace modern development practices, containerization, CI\/CD pipelines. I believe in clean code, thorough testing, and continuous improvement.": "My technical journey started with PHP, but quickly evolved to embrace modern development practices, containerization, CI\/CD pipelines. I believe in clean code, thorough testing, and continuous improvement.",
     "MySQL, PostgreSQL": "MySQL, PostgreSQL",
     "Next": "Next",
+    "Next comments page": "Next comments page",
+    "Next page": "Next page",
     "No posts found": "No posts found",
     "No tags found": "No tags found",
     "Oldest": "Oldest",
@@ -71,22 +77,27 @@
     "Pick a date": "Pick a date",
     "Posts": "Posts",
     "Previous": "Previous",
+    "Previous comments page": "Previous comments page",
+    "Previous page": "Previous page",
     "Professional Journey": "Professional Journey",
     "Profile": "Profile",
     "Publish at": "Publish at",
     "Query Performance": "Query Performance",
     "Read more": "Read more",
+    "Read more about": "Read more about",
     "Read the Blog": "Read the Blog",
     "Redis": "Redis",
     "Save Category": "Save Category",
     "Save Post": "Save Post",
     "Save Tag": "Save Tag",
+    "Search posts": "Search posts",
     "Search posts...": "Search posts...",
     "Select a category": "Select a category",
     "Select a language": "Select a language",
     "Select tags...": "Select tags...",
     "Settings": "Settings",
     "Sort by": "Sort by",
+    "Sort posts": "Sort posts",
     "Status": "Status",
     "Stay Updated": "Stay Updated",
     "Submit Comment": "Submit Comment",
@@ -104,6 +115,7 @@
     "Title Z-A": "Title Z-A",
     "Translation Key": "Translation Key",
     "View all": "View all",
+    "Write your comment here...": "Write your comment here...",
     "You have not created any tags yet.": "You have not created any tags yet.",
     "auth.failed": "auth.failed",
     "auth.password": "auth.password",
