--- a/lang/pl.json
+++ b/lang/pl.json
@@ -11,9 +11,11 @@
     "Back to all posts": "Wróć do wszystkich postów",
     "Backend Development": "Programowanie backendu",
     "Best Practices": "Najlepsze praktyki",
+    "Blog - Technology and Programming Articles": "Blog - Artykuły technologiczne i programistyczne",
     "Blog Categories": "Kategorie bloga",
     "Blog Posts": "Posty na blogu",
     "Blog Tags": "Tagi bloga",
+    "Browse our collection of blog posts about technology, programming, and software development.": "Przeglądaj naszą kolekcję artykułów technologicznych i programistycznych dotyczących technologii, programowania i rozwoju oprogramowania.",
     "CI\/CD (GitHub Actions, GitLab CI)": "CI\/CD (GitHub Actions, GitLab CI)",
     "CI\/CD pipelines, containerization": "Pipelines CI\/CD, konteneryzacja",
     "Cancel": "Anuluj",
@@ -23,6 +25,7 @@
     "Category deleted successfully": "Kategoria została pomyślnie usunięta",
     "Category updated successfully": "Kategoria została pomyślnie zaktualizowana",
     "Clean code, testing strategies, and development workflows": "Czysty kod, strategie testowania i przepływy pracy",
+    "Comment text": "Treść komentarza",
     "Comments": "Komentarze",
     "Contact Me": "Skontaktuj się ze mną",
     "Content": "Treść",
@@ -43,12 +46,13 @@
     "Get notified about new articles and resources on PHP development and DevOps practices": "Otrzymuj powiadomienia o nowych artykułach i zasobach dotyczących programowania w PHP i praktyk DevOps",
     "Home": "Strona główna",
     "I respect your privacy. Unsubscribe at any time": "Szanuję Twoją prywatność. Możesz zrezygnować w każdej chwili",
-    "I'm a passionate PHP developer with extensive experience in Laravel and Symfony frameworks. With 3 years of professional experience, I specialize in building robust, scalable web applications and implementing DevOps practices to streamline development workflows.": "Jestem pasjonującym programistą PHP z bogatym doświadczeniem w frameworkach Laravel i Symfony. Z 3-letnim doświadczeniem w branży, specjalizuję się w budowaniu niezawodnych, skalowalnych aplikacji internetowych i implementacji praktyk DevOps w celu płynnego przepływu pracy",
+    "I'm a passionate PHP developer with experience in Laravel and Symfony frameworks. With 3 years of professional experience, I specialize in building robust, scalable web applications and implementing DevOps practices to streamline development workflows.": "Jestem pasjonującym programistą PHP z bogatym doświadczeniem w frameworkach Laravel i Symfony. Z 3-letnim doświadczeniem w branży, specjalizuję się w budowaniu niezawodnych, skalowalnych aplikacji internetowych i implementacji praktyk DevOps w celu płynnego przepływu pracy",
     "Ideo Sp. z o.o.": "Ideo Sp. z o.o.",
     "Language": "Język",
     "Laravel & Symfony tips, patterns, and architectural insights": "Porady dotyczące Laravel i Symfony, wzorce i spostrzeżenia architektoniczne",
     "Latest": "Najnowsze",
     "Leading backend development with Laravel and implementing DevOps practices to streamline development workflows.": "Rozwój backendu z użyciem Laravel i implementacja praktyk DevOps w celu płynnego przepływu pracy",
+    "Leave a comment": "Zostaw komentarz",
     "Log in to your account": "Zaloguj się do swojego konta",
     "Log out": "Wyloguj się",
     "Manage Categories": "Zarządzaj kategoriami",
@@ -57,6 +61,8 @@
     "My technical journey started with PHP, but quickly evolved to embrace modern development practices, containerization, CI\/CD pipelines. I believe in clean code, thorough testing, and continuous improvement.": "Moja podróż techniczna zaczęła się od PHP, ale szybko ewoluowała do przyjęcia nowoczesnych praktyk programistycznych, konteneryzacji i CI\/CD. Wierzę w czysty kod, dokładne testowanie i ciągłe doskonalenie.",
     "MySQL, PostgreSQL": "MySQL, PostgreSQL",
     "Next": "Następna",
+    "Next comments page": "Następna strona komentarzy",
+    "Next page": "Następna strona",
     "No posts found": "Nie znaleziono żadnych postów",
     "No tags found": "Nie znaleziono tagów",
     "Oldest": "Najstarsze",
@@ -71,22 +77,27 @@
     "Pick a date": "Wybierz datę",
     "Posts": "Posty",
     "Previous": "Poprzednia",
+    "Previous comments page": "Poprzednia strona komentarzy",
+    "Previous page": "Poprzednia strona",
     "Professional Journey": "Profesjonalna podróż",
     "Profile": "Profil",
     "Publish at": "Opublikuj",
     "Query Performance": "Wydajność zapytań",
     "Read more": "Czytaj więcej",
+    "Read more about": "Czytaj więcej o",
     "Read the Blog": "Czytaj bloga",
     "Redis": "Redis",
     "Save Category": "Zapisz kategorię",
     "Save Post": "Zapisz post",
     "Save Tag": "Zapisz tag",
+    "Search posts": "Szukaj postów",
     "Search posts...": "Szukaj postów...",
     "Select a category": "Wybierz kategorię",
     "Select a language": "Wybierz język",
     "Select tags...": "Wybierz tagi...",
     "Settings": "Ustawienia",
     "Sort by": "Sortuj według",
+    "Sort posts": "Sortuj posty",
     "Status": "Status",
     "Stay Updated": "Bądź na bieżąco",
     "Submit Comment": "Wyślij komentarz",
@@ -104,6 +115,7 @@
     "Title Z-A": "Tytuł Z-A",
     "Translation Key": "Klucz tłumaczenia",
     "View all": "Pokaż wszystkie",
+    "Write your comment here...": "Napisz swój komentarz tutaj...",
     "You have not created any tags yet.": "Nie utworzyłeś jeszcze żadnych tagów.",
     "auth.failed": "Błędne dane logowania.",
     "auth.password": "Podane hasło jest nieprawidłowe.",
